Update Python ile veri ön işlemeye dalış.ipynb

--- a/jupyter notebook example/Python ile veri ön işlemeye dalış.ipynb
+++ b/jupyter notebook example/Python ile veri ön işlemeye dalış.ipynb
@@ -173,7 +173,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "sozluk = {'İsim':pd.Series(['Ada','Cem','Sibel','Ahmet','Mehmet','Ali','Veli',\n",
+    "sozluk = {'İsim':pd.Series(['Ela','Devrim','Sevgi','Hasan','Mehmet','Ali','Veli',\n",
     "          'Ayşe','Hüseyin','Necmi','Nalan','Namık']),\n",
     "          'Meslek':pd.Series(['işçi','işçi','memur','serbest','serbest',None,None,\n",
     "          'sigortacı','işsiz',None,None,'memur']),\n",
